# tutaide

./: .env.example  .gitignore  LICENSE  next.config.ts  package-lock.json  package.json  start-dev.bat  start-tauri.bat
prisma/: schema.prisma  seed.ts
scripts/: download-node.mjs  prepare-standalone.mjs
src/: middleware.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.production.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/app/(app)/[module]/: layout.tsx  module-nav.tsx
src/app/(app)/admin/: actions.ts  layout.tsx
src/app/(app)/dossiers/: actions.ts  create-dossier-dialog.tsx  document-actions.ts  dossier-card.tsx  dossier-sheet.tsx  dossiers-client.tsx  edit-dossier-dialog.tsx  page.tsx
src/app/(app)/history/: actions.ts  history-client.tsx  page.tsx  send-email-dialog.tsx
src/app/(app)/settings/: actions.ts  general-settings-tab.tsx  module-config-tab.tsx  page.tsx  settings-client.tsx  smtp-config-form.tsx  template-dialog.tsx  templates-manager.tsx
src/app/(auth)/: layout.tsx
src/components/: app-header.tsx  app-sidebar.tsx  impersonation-banner.tsx  pdf-preview.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  popover.tsx  select.tsx  sheet.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/lib/: auth.config.ts  auth.ts  default-templates.ts  documents-dir.ts  encryption.ts  mailer-client.ts  utils.ts  validations.ts
src/types/: next-auth.d.ts
(+33 files in other folders)
