[package]
name = "tutaide"
version = "0.1.0"
description = "Tut'aide - Application MJPM"
authors = ["you"]
edition = "2021"

[lib]
name = "tutaide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
